# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
drf/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
drf/migrations/: 0001_initial.py
drf_project/: settings.py  urls.py
